Fix th and td selectors that override the attribute 'align'

--- a/sass/base/generic.sass
+++ b/sass/base/generic.sass
@@ -126,7 +126,8 @@ pre
 table
   td,
   th
-    text-align: left
     vertical-align: top
+    &:not([align])
+      text-align: left
   th
     color: $text-strong
