--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -125,7 +125,8 @@ $content-table-foot-cell-color: $text-strong !default
       vertical-align: top
     th
       color: $content-table-cell-heading-color
-      text-align: left
+      &:not([align])
+        text-align: left
     thead
       td,
       th
